--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Juan Cruz Gaggioli",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.7.0",
     "parcel": "^2.7.0"
   }
 }
