--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.55.0"
   },
   "dependencies": {
+    "@uiball/loaders": "^1.2.6",
     "autoprefixer": "^10.4.2",
     "browser-sync": "^2.27.7",
     "copyfiles": "^2.4.1",
